Removed comments in the tests